[package]
name = "spacetime-call-i"
version = "0.1.0"
edition = "2024"

[dependencies]
# https://crates.io/crates/clap A simple to use, efficient, and full-featured Command Line Argument Parser
clap = { version = "4.5.37", features = ["cargo"] }

# https://crates.io/crates/clap_complete Generate shell completion scripts for your clap::Command
clap_complete = "4.5.47"

# https://crates.io/crates/shlex Split a string into shell words, like Python's shlex.
shlex = "1.3.0"
